--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,17 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    
+
+    /* Strict */
+    "strict": false, 
+    "noImplicitAny": false,
+    "strictNullChecks": false,
   },
+  
   "include": ["src"],
   // "exclude": ["node_modules", "dist", "build"],
   "references": [{ "path": "./tsconfig.node.json" }]
