--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "jsdom": "^24.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.2.0",
