--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     
 
     /* Strict */
-    "strict": false,
+    "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
   },
